// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders transform equivalently when assigning prop as string or object 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={512}
  vbWidth={640}
  width={16}
>
  <RNSVGGroup>
    <RNSVGGroup
      matrix={
        Array [
          1,
          0,
          0,
          1,
          320,
          256,
        ]
      }
    >
      <RNSVGGroup
        matrix={
          Array [
            0.4375,
            0,
            0,
            0.4375,
            128,
            0,
          ]
        }
      >
        <RNSVGPath
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
          fill={4278190080}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              -320,
              -256,
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`snapshots renders with icon object prop 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={512}
  vbWidth={640}
  width={16}
>
  <RNSVGGroup>
    <RNSVGPath
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill={4278190080}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`snapshots renders with icon specified as array from the library 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={512}
  vbWidth={640}
  width={16}
>
  <RNSVGGroup>
    <RNSVGPath
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill={4278190080}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
